--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, intial-scale=1"/>
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
+        <title>Portfolio of Yin Wu</title> 
+    </head>
+
+
+
+
+
+
+
+
+
+
+
+</html>
