added a body, header, and nav element

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
         <title>Portfolio of Yin Wu</title> 
     </head>
+    <body>
+        <header>
+            <h1>About Me</h1>
+                <p>
+                    After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
+                    The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
+                </p>
+        </header>
 
 
 
 
 
 
-
-
-
-
-
+    </body>
 </html>
