added a nav element for each section of my page

--- a/index.html
+++ b/index.html
@@ -8,16 +8,30 @@
     </head>
     <body>
         <header>
-            <h1>About Me</h1>
-                <p>
-                    After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
-                    The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
-                </p>
+            <h1>Yin Wu</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#About Me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#My Work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="Contact Me">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
-
-
-
+        <section>
+            <h2>About Me</h2>
+            <p>
+                Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
+                The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
+            </p>
+        </section>
+        
 
 
     </body>
