added a div class named profile to include a recent photo of me

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#About Me">About Me</a>
+                        <a href="#about-me">About Me</a>
                     </li>
                     <li>
-                        <a href="#My Work">My Work</a>
+                        <a href="#my-work">My Work</a>
                     </li>
                     <li>
-                        <a href="Contact Me">Contact Me</a>
+                        <a href="#contact-me">Contact Me</a>
                     </li>
                 </ul>
             </nav>
@@ -30,6 +30,19 @@
                 Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
                 The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
             </p>
+            <div class="profile">
+                <img src="./assets/css/images/photo-of-me.jpeg"
+                alt="Photo of Yin Wu" />
+            </div>
+
+            <h2>My Work</h2>
+                <p>
+
+                </p>
+            <h2>Contact Me</h2>
+                <p>
+
+                </p>
         </section>
         
 
