--- a/index.html
+++ b/index.html
@@ -30,22 +30,24 @@
                 Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
                 The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
             </p>
-            <div class="profile">
+            <div id="about-me" class="profile">
                 <img src="./assets/css/images/photo-of-me.jpeg"
                 alt="Photo of Yin Wu" />
             </div>
 
-            <h2>My Work</h2>
+            <div id="my-work" class="work">
+                <h2>My Work</h2>
                 <p>
 
                 </p>
-            <h2>Contact Me</h2>
-                <p>
+            </div>
 
+            </div id="contact-me" class="contact">
+                <h2>Contact Me</h2>
+                <p>
+                    Email: yin.wu173@gmail.com
+                    Cell: 910-220-9999
                 </p>
         </section>
-        
-
-
     </body>
 </html>
