added an image and added alt attributes to My Work section

--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
                 The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
             </p>
             <div id="about-me" class="profile">
-                <img src="./assets/css/images/photo-of-me.jpeg"
-                alt="Photo of Yin Wu" />
+                <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" />
             </div>
 
             <div id="my-work" class="work">
+                <img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
                 <h2>My Work</h2>
-                <p>
-
-                </p>
             </div>
 
             </div id="contact-me" class="contact">
@@ -48,6 +45,7 @@
                     Email: yin.wu173@gmail.com
                     Cell: 910-220-9999
                 </p>
+            </div>
         </section>
     </body>
 </html>
