included a link that deploys to my first challenge assignment under the My Work section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             </div>
 
             <div id="my-work" class="work">
-                <img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
                 <h2>My Work</h2>
+                <img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
+                <a href="https://yinwu173.github.io/get-at-able/">get-at-able</a>
+
             </div>
 
             </div id="contact-me" class="contact">
