--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
                 <h2>My Work</h2>
                 <img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
                 <a href="https://yinwu173.github.io/get-at-able/">get-at-able</a>
-
             </div>
 
-            </div id="contact-me" class="contact">
+            <div id="contact-me" class="contact">
                 <h2>Contact Me</h2>
                 <p>
-                    Email: yin.wu173@gmail.com
+                    <a href="mailto:yin.wu173@gmail.com">yin.wu173@gmail.com</a>
                     Cell: 910-220-9999
                 </p>
             </div>
