changed index doc My Work section so that when I click on the image, it deploys to my first challenge assignment application

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
             <div id="my-work" class="work">
                 <h2>My Work</h2>
-                <img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
-                <a href="https://yinwu173.github.io/get-at-able/">get-at-able</a>
+                <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
+                </a>
             </div>
 
             <div id="contact-me" class="contact">
