--- a/index.html
+++ b/index.html
@@ -24,23 +24,29 @@
             </nav>
         </header>
 
-        <section>
+        <section id="about-me">
             <h2>About Me</h2>
             <p>
-                Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a career change so I began my journey into the world of coding.
-                The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC Berkeley Bootcamp Extension Program.
+                Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a
+                career change so I began my journey into the world of coding.
+                The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC
+                Berkeley Bootcamp Extension Program.
             </p>
-            <div id="about-me" class="profile">
-                <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" />
+            <div class="profile">
+                <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" class="float-left"/>
             </div>
+        </section>
 
-            <div id="my-work" class="work">
+        <section id="my-work">
+            <div class="work">
                 <h2>My Work</h2>
-                <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg" alt="corporate workers having an office meeting" />                
-                </a>
+                <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
+                        alt="corporate workers having an office meeting" /></a>
             </div>
+        </section>
 
-            <div id="contact-me" class="contact">
+        <section id="contact-me">
+            <div class="contact">
                 <h2>Contact Me</h2>
                 <p>
                     <a href="mailto:yin.wu173@gmail.com">yin.wu173@gmail.com</a>
