--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
                         alt="corporate workers having an office meeting" /></a>
             </div>
+            <div class="work-1">
+                <img src="./assets/css/images/city-view.jpeg" />
+            </div>
+            <div class="work-2">
+                <img src="./assets/css/images/cloudy-sky.jpeg" />
+            </div>
+            <div class="work-3">
+                <img src="./assets/css/images/sedona-landscape.jpeg" />
+            </div>
         </section>
 
         <section id="contact-me">
