gave works class element all the same width, border-radius, and margin styling

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
                         alt="corporate workers having an office meeting" /></a>
             </div>
-            <div class="work-1">
+            <div class="works">
                 <img src="./assets/css/images/city-view.jpeg" />
             </div>
-            <div class="work-2">
+            <div class="works">
                 <img src="./assets/css/images/cloudy-sky.jpeg" />
             </div>
-            <div class="work-3">
+            <div class="works">
                 <img src="./assets/css/images/sedona-landscape.jpeg" />
             </div>
         </section>
