added display, flex-wrap, direction, and padding to flex-container class. Also added border to images under class work-items

--- a/index.html
+++ b/index.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
-        <title>Portfolio of Yin Wu</title> 
-    </head>
-    <body>
-        <header>
-            <h1>Yin Wu</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#my-work">My Work</a>
-                    </li>
-                    <li>
-                        <a href="#contact-me">Contact Me</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
 
-        <section id="about-me">
-            <h2>About Me</h2>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, intial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <title>Portfolio of Yin Wu</title>
+</head>
+
+<body>
+    <header>
+        <h1>Yin Wu</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#my-work">My Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>
+            Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time
+            for a
+            career change so I began my journey into the world of coding.
+            The following web page presents my portfolio which I have created with the knowledge and skills retained
+            from the UC
+            Berkeley Bootcamp Extension Program.
+        </p>
+        <div class="profile">
+            <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" class="float-left" />
+        </div>
+    </section>
+
+    <section id="my-work">
+        <h2>My Work</h2>
+        <div class="my-work">
+            <div class="flex-container">
+                <div class="work-items">
+                    <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
+                            alt="corporate workers having an office meeting" /></a>
+                </div>
+                <div class="work-items">
+                    <img src="./assets/css/images/city-view.jpeg" alt="Day city view of Los Angeles" />
+                </div>
+                <div class="work-items">
+                    <img src="./assets/css/images/cloudy-sky.jpeg" alt="Cloudy sky" />
+                </div>
+                <div class="work-items">
+                    <img src="./assets/css/images/sedona-landscape.jpeg" alt="Sedona mountain landcape" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact-me">
+        <div class="contact">
+            <h2>Contact Me</h2>
             <p>
-                Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time for a
-                career change so I began my journey into the world of coding.
-                The following web page presents my portfolio which I have created with the knowledge and skills retained from the UC
-                Berkeley Bootcamp Extension Program.
+                <a href="mailto:yin.wu173@gmail.com">yin.wu173@gmail.com</a>
+                Cell: 910-220-9999
             </p>
-            <div class="profile">
-                <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" class="float-left"/>
-            </div>
-        </section>
+        </div>
+    </section>
+</body>
 
-        <section id="my-work">
-            <div class="work">
-                <h2>My Work</h2>
-                <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
-                        alt="corporate workers having an office meeting" /></a>
-            </div>
-            <div class="works">
-                <img src="./assets/css/images/city-view.jpeg" />
-            </div>
-            <div class="works">
-                <img src="./assets/css/images/cloudy-sky.jpeg" />
-            </div>
-            <div class="works">
-                <img src="./assets/css/images/sedona-landscape.jpeg" />
-            </div>
-        </section>
-
-        <section id="contact-me">
-            <div class="contact">
-                <h2>Contact Me</h2>
-                <p>
-                    <a href="mailto:yin.wu173@gmail.com">yin.wu173@gmail.com</a>
-                    Cell: 910-220-9999
-                </p>
-            </div>
-        </section>
-    </body>
 </html>
