added styling to css for class content and adjusted font-size along with margins

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="contact">
             <h2>Contact Me</h2>
             <p>
+                Email:
                 <a href="mailto:yin.wu173@gmail.com">yin.wu173@gmail.com</a>
                 Cell: 910-220-9999
             </p>
