added a class attribute to the about-me section and styled css by adding flex properties to h2, p, profile image, about-me

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <section id="about-me">
+    <section id="about-me" class="about-me">
         <h2>About Me</h2>
         <p>
             Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time
