changed the photo for the first work items class, edited description, and changed size of images on css to wide percentage smaller than work-items-done image

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <h2>My Work</h2>
         <div class="my-work">
             <div class="flex-container">
-                <div class="work-items">
+                <div class="work-items-done">
                     <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
                             alt="corporate workers having an office meeting" /></a>
                 </div>
                 <div class="work-items">
-                    <img src="./assets/css/images/city-view.jpeg" alt="Day city view of Los Angeles" />
+                    <img src="./assets/css/images/my-gray-cat.jpeg" alt="Gray cat laying on bed" />
                 </div>
                 <div class="work-items">
                     <img src="./assets/css/images/cloudy-sky.jpeg" alt="Cloudy sky" />
