--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
     <section id="about-me" class="about-me">
         <h2>About Me</h2>
         <p>
-            Hello and Welcome! After working the in the legal field for almost two years, I finally decided it was time
-            for a
-            career change so I began my journey into the world of coding.
+            Hello and Welcome! <br /><br /> After working the in the legal field for almost two years, I finally decided it was time
+            for a career change so I began my journey into the world of coding.  <br /><br />
             The following web page presents my portfolio which I have created with the knowledge and skills retained
-            from the UC
-            Berkeley Bootcamp Extension Program.
+            from the UC Berkeley Bootcamp Extension Program.
         </p>
     </section>
 
