added a div below each image under my works so that I can give a title to each image. Then, styled css for the bottom-left class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#my-work">My Work</a>
+                    <a href="#my-works">My Works</a>
                 </li>
                 <li>
                     <a href="#contact-me">Contact Me</a>
@@ -40,22 +40,26 @@
         </p>
     </section>
 
-    <section id="my-work">
-        <h2>My Work</h2>
-        <div class="my-work">
+    <section id="my-works">
+        <h2>My Works</h2>
+        <div class="my-works">
             <div class="flex-container">
                 <div class="work-items-done">
                     <a href="https://yinwu173.github.io/get-at-able/"><img src="./assets/css/images/digital-marketing-meeting.jpg"
-                            alt="corporate workers having an office meeting" /></a>
+                        alt="corporate workers having an office meeting" /></a>
+                        <div class="bottom-left">Horiseon Challenge</div>
                 </div>
                 <div class="work-items">
                     <img src="./assets/css/images/my-gray-cat.jpeg" alt="Gray cat laying on bed" />
+                    <div class="bottom-left">My Cat</div>
                 </div>
                 <div class="work-items">
                     <img src="./assets/css/images/cloudy-sky.jpeg" alt="Cloudy sky" />
+                    <div class="bottom-left">Cloudy Sky</div>
                 </div>
                 <div class="work-items">
                     <img src="./assets/css/images/sedona-landscape.jpeg" alt="Sedona mountain landcape" />
+                    <div class="bottom-left">Sedona</div>
                 </div>
             </div>
         </div>
