added media queries for 992px and 768px in css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="profile">
-        <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" class="float-left" />
+        <img src="./assets/css/images/photo-of-me.jpeg" alt="Photo of Yin Wu" />
     </div>
 
     <section id="about-me" class="about-me">
